remove cut support for now

--- a/index.html
+++ b/index.html
@@ -612,12 +612,12 @@
                             <li><a href="#" class="demo author" data-author="huffmanCurved" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown-submenu">
-                        <a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#" class="demo" data-url="Popup/popupSimple.svg">Simple Square</a></li>
-                        </ul>
-                    </li>
+                    <!--<li class="dropdown-submenu">-->
+                        <!--<a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>-->
+                        <!--<ul class="dropdown-menu">-->
+                            <!--<li><a href="#" class="demo" data-url="Popup/popupSimple.svg">Simple Square</a></li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Maze Foldings<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
@@ -972,8 +972,8 @@
                         <li>Valley folds have <b style="color:blue">blue</b> stroke - rgb(0, 0, 255), hex #0000ff</li>
                         <li>Boundary edges have <b style="color:black">black</b> stroke - rgb(0, 0, 0), hex #000000 - use
                         this edge type for both the outline of the pattern, and any internal holes.</li>
-                        <li>Cuts have <b style="color:#00ff00">green</b> stroke - rgb(0, 255, 0), hex #00ff00- use this edge type
-                        to form thin slits in the pattern.</li>
+                        <!--<li>Cuts have <b style="color:#00ff00">green</b> stroke - rgb(0, 255, 0), hex #00ff00- use this edge type-->
+                        <!--to form thin slits in the pattern.</li>-->
                         <li>Hinges (undriven creases) have <b style="color:magenta">magenta</b> stroke - rgb(255, 0, 255), hex #ff00ff</li>
                     </ul>
                     <img src="assets/examplepattern.jpg"/>
