--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,8 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-body">
-                This app uses GPU functions that are not supported by this device/browser, please try again on desktop with Chrome/Firefox.<br/><br/>
+                This app uses GPU functions that are not supported by this device/browser,
+                please try again on desktop with Chrome/Firefox.<br/>
             </div>
         </div>
     </div>
