--- a/index.html
+++ b/index.html
@@ -613,12 +613,13 @@
                             <li><a href="#" class="demo author" data-author="huffmanCurved" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
                         </ul>
                     </li>
-                    <!--<li class="dropdown-submenu">-->
-                        <!--<a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>-->
-                        <!--<ul class="dropdown-menu">-->
+                    <li class="dropdown-submenu">
+                        <a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Popup/geometricPopup.svg">Geometric Pattern</a></li>
                             <!--<li><a href="#" class="demo" data-url="Popup/popupSimple.svg">Simple Square</a></li>-->
-                        <!--</ul>-->
-                    <!--</li>-->
+                        </ul>
+                    </li>
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Maze Foldings<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
