--- a/index.html
+++ b/index.html
@@ -611,6 +611,8 @@
                         <a tabindex="-1">Curved Creases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo author" data-author="huffmanCurved" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
+                            <li><a href="#" class="demo author" data-author="sam" data-url="Curved/shell14.svg">14 panel shell</a></li>
+                            <li><a href="#" class="demo author" data-author="sam" data-url="Curved/shell6.svg">6 panel shell</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
@@ -1414,6 +1416,9 @@
         </div>
         <div id="miuraOri">
             Designed by <a href="https://en.wikipedia.org/wiki/Miura_fold" target="_blank">Koryo Miura</a>.
+        </div>
+        <div id="sam">
+            Designed by <a href="http://www.mit.edu/~calisch/" target="_blank">Sam Calisch</a>.
         </div>
     </div>
 </div>
