--- a/index.html
+++ b/index.html
@@ -618,7 +618,8 @@
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#" class="demo" data-url="Popup/geometricPopup.svg">Geometric Pattern</a></li>
+                            <li><a href="#" class="demo author" data-author="ullagami" data-url="Popup/geometricPopup.svg">Geometric Pattern</a></li>
+                            <li><a href="#" class="demo author" data-author="popupology" data-url="Popup/castlePopup.svg">Castle</a></li>
                             <!--<li><a href="#" class="demo" data-url="Popup/popupSimple.svg">Simple Square</a></li>-->
                         </ul>
                     </li>
@@ -1419,6 +1420,14 @@
         </div>
         <div id="sam">
             Designed by <a href="http://www.mit.edu/~calisch/" target="_blank">Sam Calisch</a>.
+        </div>
+        <div id="popupology">
+            Designed by Elod Beregszaszi, original patterns available at <a href="http://www.popupology.co.uk/galleries" target="_blank">
+            Popupology</a>.
+        </div>
+        <div id="ullagami">
+            Original patterns available at <a href="http://ullagami.com/gallery.php" target="_blank">
+            Ullagami</a>.
         </div>
     </div>
 </div>
