--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@
             Popupology</a>.
         </div>
         <div id="ullagami">
-            Original patterns available at <a href="http://ullagami.com/gallery.php" target="_blank">
+            Original pattern available at <a href="http://ullagami.com/how-to.php" target="_blank">
             Ullagami</a>.
         </div>
     </div>
