--- a/index.html
+++ b/index.html
@@ -616,6 +616,12 @@
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
+                        <a tabindex="-1">Kirigami<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Kirigami/honeycombKiri.svg">Kirigami Honeycomb</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
                         <a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo author" data-author="ullagami" data-url="Popup/geometricPopup.svg">Geometric Pattern</a></li>
