--- a/index.html
+++ b/index.html
@@ -615,17 +615,18 @@
                             <li><a href="#" class="demo author" data-author="sam" data-url="Curved/shell6.svg">6 panel shell</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown-submenu">
-                        <a tabindex="-1">Kirigami<span class="pull-right fui-arrow-right"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#" class="demo" data-url="Kirigami/honeycombKiri.svg">Kirigami Honeycomb</a></li>
-                        </ul>
-                    </li>
+                    <!--<li class="dropdown-submenu">-->
+                        <!--<a tabindex="-1">Kirigami<span class="pull-right fui-arrow-right"></span></a>-->
+                        <!--<ul class="dropdown-menu">-->
+                            <!--<li><a href="#" class="demo" data-url="Kirigami/honeycombKiri.svg">Kirigami Honeycomb</a></li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo author" data-author="ullagami" data-url="Popup/geometricPopup.svg">Geometric Pattern</a></li>
                             <li><a href="#" class="demo author" data-author="popupology" data-url="Popup/castlePopup.svg">Castle</a></li>
+                            <li><a href="#" class="demo author" data-author="popupology" data-url="Popup/housePopup.svg">House</a></li>
                             <!--<li><a href="#" class="demo" data-url="Popup/popupSimple.svg">Simple Square</a></li>-->
                         </ul>
                     </li>
