--- a/index.html
+++ b/index.html
@@ -1445,9 +1445,12 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <b>SCREEN RECORDING</b><br/><br/>
+                <b><span class="video">SCREEN RECORDING</span><span class="gif">ANIMATED GIF</span></b><br/><br/>
                 <a href="#" id="setupAnimation" class="displayBlock btn btn-lg btn-default">Configure Fold Percent Animation</a>&nbsp;&nbsp;<span class="smallTxt" id="foldPercentAnimationStatus"></span><br/><br/>
-                Filename: &nbsp;&nbsp;<input id="screenRecordFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .webm<br/><br/>
+                Filename: &nbsp;&nbsp;<input id="screenRecordFilename" value="" placeholder="" class="bigInput text form-control" type="text">
+                    <span class="gif">.gif</span>
+                    <span class="video">.webm</span>
+                <br/><br/>
                 Scale: &nbsp;&nbsp;<input id="capturerScale" value="" placeholder="" class="float form-control" type="text"><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span id="canvasDimensions"></span></b><br/>
                 <span class="smallTxt">( resize browser window to change aspect ratio )</span><br/><br/>
