adding gif to about

--- a/index.html
+++ b/index.html
@@ -905,7 +905,9 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <p>
-                <b>ORIGAMI SIMULATOR</b><br/><br/>
+                <b>ORIGAMI SIMULATOR</b><br/>
+
+                    <img style="width: 500px;" src="crane.gif" />
 
                     This app allows you to simulate how any origami crease pattern will fold.  It may look a little different
                     from what you typically think of as "origami" - rather than folding paper in a set of sequential steps,
