--- a/index.html
+++ b/index.html
@@ -1195,10 +1195,10 @@
                 <!--</label>-->
             <!--</div>-->
             <div>
-                <a href="#" class="seeMore closed" data-id="virtualReality"><span class="fui-triangle-down"></span>Virtual Reality:</a>
+                <a href="#" class="seeMore closed" data-id="virtualReality"><span class="fui-triangle-down"></span>Virtual Reality:</a><a class="about floatRight" href="#" id="aboutVR"><span class="fui-question-circle"></span></a>
             </div>
             <div id="virtualReality" class="hide indent smallTxt">
-                Status: &nbsp;<span id="VRstatus"></span><a class="about floatRight" href="#" id="aboutVR"><span class="fui-question-circle"></span></a>
+                Status: &nbsp;<span id="VRstatus"></span>
                 <div id="VRoptions"><br/>
                     <a href="#" id="enterVR" class="displayBlock btn btn-lg btn-inverse"></a>
                 </div><br/><br/>
