--- a/index.html
+++ b/index.html
@@ -891,6 +891,7 @@
                             <li><a href="#" class="demo author" data-author="miuraOri" data-url="Tessellations/miura-ori.svg">Miura-Ori</a></li>
                             <li><a href="#" class="demo author" data-author="miuraOri" data-url="Tessellations/miura_sharpangle.svg">Miura-Ori (sharp angle)</a></li>
                             <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb</a></li>
+                            <li><a href="#" class="demo author" data-author="whirlpool" data-url="Tessellations/whirlpool.svg">Whirlpool</a></li>
                             <li class="divider"></li>
                             <li><a href="#" class="demo author" data-author="huffmanTessellations" data-url="Tessellations/huffmanExtrudedBoxes.svg">Huffman Extruded Boxes</a></li>
                             <li><a href="#" class="demo author" data-author="huffmanTessellations" data-url="Tessellations/huffmanWaterbomb.svg">Huffman Waterbombs</a></li>
@@ -915,12 +916,13 @@
                             <li><a href="#" class="demo author" data-author="sam" data-url="Curved/shell6.svg">6 panel shell</a></li>
                         </ul>
                     </li>
-                    <!--<li class="dropdown-submenu">-->
-                        <!--<a tabindex="-1">Kirigami<span class="pull-right fui-arrow-right"></span></a>-->
-                        <!--<ul class="dropdown-menu">-->
-                            <!--<li><a href="#" class="demo" data-url="Kirigami/honeycombKiri.svg">Kirigami Honeycomb</a></li>-->
-                        <!--</ul>-->
-                    <!--</li>-->
+                    <li class="dropdown-submenu">
+                        <a tabindex="-1">Kirigami<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo author" data-author="miyamotoHappy" data-url="Kirigami/miyamotoTower.svg">Miyamoto Tower</a></li>
+                            <li><a href="#" class="demo" data-url="Kirigami/honeycombKiri.svg">Kirigami Honeycomb</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
@@ -1717,6 +1719,14 @@
         <div id="ullagami">
             Designed by Ullagami, original pattern available at <a href="http://ullagami.com/how-to.php" target="_blank">
             Ullagami</a>.
+        </div>
+        <div id="whirlpool">
+            Designed by Tomoko Fuse.  Crease pattern by <a href="http://www.happyfolding.com/" target="_blank">
+            Sara Adams</a> - video of the design process on <a href="https://www.youtube.com/watch?v=k1BH_FEUZWo" target="_blank">YouTube</a>.
+        </div>
+        <div id="miyamotoHappy">
+            Designed by <a href="https://www.flickr.com/photos/yoshinobu_miyamoto/" target="_blank">Yoshinobu Miyamoto</a>.  Crease
+            pattern from <a href="http://www.happyfolding.com/files/Miyamoto-RES_patterns.pdf" target="_blank">Happy Folding</a>.
         </div>
     </div>
 </div>
